# first-fastapi-sample

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  sample.py
api/: db.py  main.py  migrate_db.py
api/config/: config.py  mysql_config.py  redis_config.py  security_config.py  server_config.py
api/cruds/: done.py  task.py  token.py  user.py
api/exceptions/http_exception/: task_exception.py  user_exception.py
api/models/: task.py  user.py
api/routers/: done.py  task.py  token.py  user.py
api/schemas/: task.py  user.py
dockerfiles/: docker-compose-dev.yaml
tests/: test_main.py
